# pipe-chain

./: Cargo.toml  readme.md
src/: byte.rs  lib.rs  str.rs  tag.rs  take.rs
src/parser/: bencode.rs  mod.rs  pktline.rs  websocket.rs
src/pipe/: and.rs  and_then.rs  boxed.rs  either.rs  error.rs  map.rs  mod.rs  not.rs  opt.rs  or.rs  peek.rs  repeat.rs  skip.rs  unpack.rs  until.rs  wrap.rs
